envoy/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: routes
              domains: ["*"]
              routes:
              - match:
                  prefix: "/orders-api/"
                route:
                  prefix_rewrite: "/"
                  host_rewrite_literal: api:8080
                  cluster: service_orders-api
              - match:
                  prefix: "/users-api/"
                route:
                  prefix_rewrite: "/"
                  host_rewrite_literal: users-api:9996
                  cluster: service_users-api

  clusters:
  - name: service_orders-api
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_orders-api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 8080
  - name: service_users-api
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_users-api
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: users-api
                    port_value: 9996
